--- a/booking-services/src/main/resources/application.properties
+++ b/booking-services/src/main/resources/application.properties
@@ -1,8 +1,10 @@
-spring.jpa.hibernate.ddl-auto = update
-spring.jpa.show-sql=true
-spring.datasource.url=jdbc:mysql://localhost:3306/bookingDB
+spring.cloud.config.profile=dev
+
 spring.datasource.username=root
 spring.datasource.password=
-spring.jpa.generate-ddl=true
 
-server.port=8081    
+
+spring.application.name=booking-microservice
+server.port=0
+eureka.instance.instance-id=${spring.application.name}:${random.uuid}
+
